Fix file browser icons stretching

--- a/src/css/FileBrowser.css
+++ b/src/css/FileBrowser.css
@@ -47,3 +47,7 @@
 .backCell {
     background: #512da8;
 }
+
+.cellIcon {
+    height: 24px;
+}
